package com.epam.training.client;

public enum Ethnicity {
    European,
    Asian,
    African,
    Indian,
    Oceanian,
    American,
    Mixed,
    Unknown
}
