package com.epam.training.client;

public enum Sex {
    Male,
    Female,
    Unknown
}
