package com.epam.training.model;

import java.sql.Timestamp;
import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class Delivery {

  private Integer id;
  private int stockId;
  private int quantity;
  private Timestamp date;
  private boolean scheduled;
  private Long timeInterval;

  public Delivery(int stockId, int quantity, long timeInterval) {
    this(null, stockId, quantity, null, true, timeInterval);
  }

  public Delivery(int id, int stockId, int quantity, long timeInterval) {
    this(id, stockId, quantity, null, true, timeInterval);
  }

  public Delivery(int stockId, int quantity, Timestamp firstDate) {
    this(null, stockId, quantity, firstDate, false, null);
  }

  public Delivery(int id, int stockId, int quantity, Timestamp firstDate) {
    this(id, stockId, quantity, firstDate, false, 0L);
  }
}
