@startuml

title __JDBC-CRUD3's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.client {
      class BasicClient {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      abstract class Client {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.delivery {
      class Delivery {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.delivery {
      package com.epam.training.delivery.repository {
        class DeliveryRepository {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.delivery {
      package com.epam.training.delivery.controller {
        class DeliveryRestController {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.delivery {
      package com.epam.training.delivery.service {
        class DeliveryService {
        }
      }
    }
  }
  

  package com.epam.training {
    class DemoApplication {
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      enum Ethnicity {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.order {
      class Order {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.order {
      package com.epam.training.order.repository {
        class OrderRepository {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.order {
      package com.epam.training.order.controller {
        class OrderRestController {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.order {
      package com.epam.training.order.service {
        class OrderService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      class Revision {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.repository {
        class RevisionRepository {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.controller {
        class RevisionRestController {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.service {
        class RevisionSchedulingService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.revision {
      package com.epam.training.revision.service {
        class RevisionService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      enum Sex {
      }
    }
  }
  

  package com.epam.training {
    class SpringFoxConfig {
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      class Stock {
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.repository {
        class StockRepository {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.controller {
        class StockRestController {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockSchedulingService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.stock {
      package com.epam.training.stock.service {
        class StockService {
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.client {
      class VipClient {
      }
    }
  }
  

  BasicClient -up-|> Client
  Client o-- Sex : sex
  Client o-- Ethnicity : ethnicity
  DeliveryRepository -up-|> NamedParameterJdbcDaoSupport
  DeliveryRestController o-- DeliveryService : deliveryService
  DeliveryService o-- DeliveryRepository : deliveryRepository
  DeliveryService o-- StockRepository : stockRepository
  DemoApplication -up-|> CommandLineRunner
  OrderRepository -up-|> NamedParameterJdbcDaoSupport
  OrderRestController o-- OrderService : orderService
  OrderService o-- OrderRepository : orderRepository
  OrderService o-- StockRepository : stockRepository
  RevisionRepository -up-|> NamedParameterJdbcDaoSupport
  RevisionRestController o-- RevisionService : revisionService
  RevisionSchedulingService o-- RevisionService : revisionService
  RevisionService o-- RevisionRepository : revisionRepository
  RevisionService o-- OrderRepository : orderRepository
  StockRepository -up-|> NamedParameterJdbcDaoSupport
  StockRestController o-- StockService : stockService
  StockSchedulingService o-- StockService : stockService
  StockService o-- StockRepository : stockRepository
  VipClient -up-|> Client


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
